# serializer version: 1
# name: test_calculate_responsibility[Distribution.BetaBinomial-dist_args1]
  Explanation(
    args=CausalArgs(
      all=False,
      alpha=0.2,
      analyze=False,
      batch=1,
      binary_threshold=None,
      blend=0.0,
      chunk_size=10,
      colour=200,
      concentrate=False,
      confidence_filter=0.0,
      config_location=None,
      data_location=None,
      db=None,
      distribution=<Distribution.BetaBinomial: 3>,
      distribution_args=list([
        1,
        1,
      ]),
      gpu=False,
      grid=False,
      heatmap=None,
      heatmap_colours='magma',
      info=True,
      insertion_step=100,
      iters=2,
      mark_segments=False,
      mask_value=0,
      means=None,
      min_box_size=10,
      mode=None,
      model=None,
      no_expansions=50,
      norm=255.0,
      output=None,
      path='tests/test_data/dog.jpg',
      processed=False,
      progress=True,
      queue_len=1,
      queue_style=<Queue.Area: 1>,
      raw=False,
      resize=False,
      search_limit=1000,
      seed=42,
      segmentation=False,
      shape=None,
      spatial_eta=0.2,
      spatial_radius=25,
      spotlight_eta=0.2,
      spotlight_size=20,
      spotlight_step=5,
      spotlights=10,
      stds=None,
      strategy=<Strategy.Spatial: 2>,
      surface=None,
      tree_depth=10,
      verbosity=0,
      weighted=False,
    ),
    data=Data: RGB, ['N', 3, 224, 224], 224, 224, 3, first
  	 Target:CLASS: 207, CONF: 0.20462, TARGET_CLASS: None, TARGET_CONFIDENCE: None,
    explanation=None,
    final_mask=None,
    maps={207: 4},
    run_stats=dict({
      'avg_box_size': 128.16666666666669,
      'max_depth_reached': 6,
      'total_failing': 177,
      'total_passing': 89,
    }),
    target_map=array([[ 3.1666667,  4.6666665,  4.6666665, ...,  4.6666665,  4.6666665,
           4.6666665],
         [ 3.1666667,  4.6666665,  4.6666665, ...,  4.6666665,  4.6666665,
           4.6666665],
         [ 3.1666667,  4.6666665,  4.6666665, ...,  4.6666665,  4.6666665,
           4.6666665],
         ...,
         [ 6.6666665, 13.666666 , 13.666666 , ...,  5.833333 ,  5.833333 ,
           5.833333 ],
         [ 6.6666665, 13.666666 , 13.666666 , ...,  5.833333 ,  5.833333 ,
           5.833333 ],
         [ 6.6666665, 13.666666 , 13.666666 , ...,  5.833333 ,  5.833333 ,
           5.833333 ]], dtype=float32),
  )
# ---
# name: test_calculate_responsibility[Distribution.BetaBinomial-dist_args2]
  Explanation(
    args=CausalArgs(
      all=False,
      alpha=0.2,
      analyze=False,
      batch=1,
      binary_threshold=None,
      blend=0.0,
      chunk_size=10,
      colour=200,
      concentrate=False,
      confidence_filter=0.0,
      config_location=None,
      data_location=None,
      db=None,
      distribution=<Distribution.BetaBinomial: 3>,
      distribution_args=list([
        0.5,
        0.5,
      ]),
      gpu=False,
      grid=False,
      heatmap=None,
      heatmap_colours='magma',
      info=True,
      insertion_step=100,
      iters=2,
      mark_segments=False,
      mask_value=0,
      means=None,
      min_box_size=10,
      mode=None,
      model=None,
      no_expansions=50,
      norm=255.0,
      output=None,
      path='tests/test_data/dog.jpg',
      processed=False,
      progress=True,
      queue_len=1,
      queue_style=<Queue.Area: 1>,
      raw=False,
      resize=False,
      search_limit=1000,
      seed=42,
      segmentation=False,
      shape=None,
      spatial_eta=0.2,
      spatial_radius=25,
      spotlight_eta=0.2,
      spotlight_size=20,
      spotlight_step=5,
      spotlights=10,
      stds=None,
      strategy=<Strategy.Spatial: 2>,
      surface=None,
      tree_depth=10,
      verbosity=0,
      weighted=False,
    ),
    data=Data: RGB, ['N', 3, 224, 224], 224, 224, 3, first
  	 Target:CLASS: 207, CONF: 0.20462, TARGET_CLASS: None, TARGET_CONFIDENCE: None,
    explanation=None,
    final_mask=None,
    maps={207: 4},
    run_stats=dict({
      'avg_box_size': 86.0,
      'max_depth_reached': 5,
      'total_failing': 141,
      'total_passing': 83,
    }),
    target_map=array([[ 4.6666665,  4.6666665,  4.6666665, ...,  4.6666665,  4.6666665,
           4.6666665],
         [ 4.6666665,  4.6666665,  4.6666665, ...,  4.6666665,  4.6666665,
           4.6666665],
         [ 4.6666665,  4.6666665,  4.6666665, ...,  4.6666665,  4.6666665,
           4.6666665],
         ...,
         [16.       , 16.       , 16.       , ..., 12.833334 ,  5.833333 ,
           5.833333 ],
         [16.       , 16.       , 16.       , ..., 12.833334 ,  5.833333 ,
           5.833333 ],
         [16.       , 16.       , 16.       , ..., 12.833334 ,  5.833333 ,
           5.833333 ]], dtype=float32),
  )
# ---
# name: test_calculate_responsibility[Distribution.BetaBinomial-dist_args3]
  Explanation(
    args=CausalArgs(
      all=False,
      alpha=0.2,
      analyze=False,
      batch=1,
      binary_threshold=None,
      blend=0.0,
      chunk_size=10,
      colour=200,
      concentrate=False,
      confidence_filter=0.0,
      config_location=None,
      data_location=None,
      db=None,
      distribution=<Distribution.BetaBinomial: 3>,
      distribution_args=list([
        1,
        0.5,
      ]),
      gpu=False,
      grid=False,
      heatmap=None,
      heatmap_colours='magma',
      info=True,
      insertion_step=100,
      iters=2,
      mark_segments=False,
      mask_value=0,
      means=None,
      min_box_size=10,
      mode=None,
      model=None,
      no_expansions=50,
      norm=255.0,
      output=None,
      path='tests/test_data/dog.jpg',
      processed=False,
      progress=True,
      queue_len=1,
      queue_style=<Queue.Area: 1>,
      raw=False,
      resize=False,
      search_limit=1000,
      seed=42,
      segmentation=False,
      shape=None,
      spatial_eta=0.2,
      spatial_radius=25,
      spotlight_eta=0.2,
      spotlight_size=20,
      spotlight_step=5,
      spotlights=10,
      stds=None,
      strategy=<Strategy.Spatial: 2>,
      surface=None,
      tree_depth=10,
      verbosity=0,
      weighted=False,
    ),
    data=Data: RGB, ['N', 3, 224, 224], 224, 224, 3, first
  	 Target:CLASS: 207, CONF: 0.20462, TARGET_CLASS: None, TARGET_CONFIDENCE: None,
    explanation=None,
    final_mask=None,
    maps={207: 4},
    run_stats=dict({
      'avg_box_size': 215.25,
      'max_depth_reached': 6,
      'total_failing': 102,
      'total_passing': 66,
    }),
    target_map=array([[4.6666665, 4.6666665, 4.6666665, ..., 4.6666665, 4.6666665,
          4.6666665],
         [4.6666665, 4.6666665, 4.6666665, ..., 4.6666665, 4.6666665,
          4.6666665],
         [4.6666665, 4.6666665, 4.6666665, ..., 4.6666665, 4.6666665,
          4.6666665],
         ...,
         [5.666667 , 5.666667 , 5.666667 , ..., 8.5      , 8.5      ,
          8.5      ],
         [5.666667 , 5.666667 , 5.666667 , ..., 8.5      , 8.5      ,
          8.5      ],
         [5.666667 , 5.666667 , 5.666667 , ..., 8.5      , 8.5      ,
          8.5      ]], dtype=float32),
  )
# ---
# name: test_calculate_responsibility[Distribution.BetaBinomial-dist_args4]
  Explanation(
    args=CausalArgs(
      all=False,
      alpha=0.2,
      analyze=False,
      batch=1,
      binary_threshold=None,
      blend=0.0,
      chunk_size=10,
      colour=200,
      concentrate=False,
      confidence_filter=0.0,
      config_location=None,
      data_location=None,
      db=None,
      distribution=<Distribution.BetaBinomial: 3>,
      distribution_args=list([
        0.5,
        1,
      ]),
      gpu=False,
      grid=False,
      heatmap=None,
      heatmap_colours='magma',
      info=True,
      insertion_step=100,
      iters=2,
      mark_segments=False,
      mask_value=0,
      means=None,
      min_box_size=10,
      mode=None,
      model=None,
      no_expansions=50,
      norm=255.0,
      output=None,
      path='tests/test_data/dog.jpg',
      processed=False,
      progress=True,
      queue_len=1,
      queue_style=<Queue.Area: 1>,
      raw=False,
      resize=False,
      search_limit=1000,
      seed=42,
      segmentation=False,
      shape=None,
      spatial_eta=0.2,
      spatial_radius=25,
      spotlight_eta=0.2,
      spotlight_size=20,
      spotlight_step=5,
      spotlights=10,
      stds=None,
      strategy=<Strategy.Spatial: 2>,
      surface=None,
      tree_depth=10,
      verbosity=0,
      weighted=False,
    ),
    data=Data: RGB, ['N', 3, 224, 224], 224, 224, 3, first
  	 Target:CLASS: 207, CONF: 0.20462, TARGET_CLASS: None, TARGET_CONFIDENCE: None,
    explanation=None,
    final_mask=None,
    maps={207: 4},
    run_stats=dict({
      'avg_box_size': 850.3333333333334,
      'max_depth_reached': 7,
      'total_failing': 157,
      'total_passing': 81,
    }),
    target_map=array([[ 2.3333335,  2.3333335,  2.3333335, ...,  2.3333335,  2.3333335,
           2.3333335],
         [ 2.3333335,  2.3333335,  2.3333335, ...,  2.3333335,  2.3333335,
           2.3333335],
         [ 2.3333335,  2.3333335,  2.3333335, ...,  2.3333335,  2.3333335,
           2.3333335],
         ...,
         [ 2.3333335,  2.3333335,  2.3333335, ..., 11.666667 , 11.666667 ,
          11.666667 ],
         [ 2.3333335,  2.3333335,  2.3333335, ..., 11.666667 , 11.666667 ,
          11.666667 ],
         [ 2.3333335,  2.3333335,  2.3333335, ..., 11.666667 , 11.666667 ,
          11.666667 ]], dtype=float32),
  )
# ---
# name: test_calculate_responsibility[Distribution.Uniform-dist_args0]
  Explanation(
    args=CausalArgs(
      all=False,
      alpha=0.2,
      analyze=False,
      batch=1,
      binary_threshold=None,
      blend=0.0,
      chunk_size=10,
      colour=200,
      concentrate=False,
      confidence_filter=0.0,
      config_location=None,
      data_location=None,
      db=None,
      distribution=<Distribution.Uniform: 2>,
      distribution_args=None,
      gpu=False,
      grid=False,
      heatmap=None,
      heatmap_colours='magma',
      info=True,
      insertion_step=100,
      iters=2,
      mark_segments=False,
      mask_value=0,
      means=None,
      min_box_size=10,
      mode=None,
      model=None,
      no_expansions=50,
      norm=255.0,
      output=None,
      path='tests/test_data/dog.jpg',
      processed=False,
      progress=True,
      queue_len=1,
      queue_style=<Queue.Area: 1>,
      raw=False,
      resize=False,
      search_limit=1000,
      seed=42,
      segmentation=False,
      shape=None,
      spatial_eta=0.2,
      spatial_radius=25,
      spotlight_eta=0.2,
      spotlight_size=20,
      spotlight_step=5,
      spotlights=10,
      stds=None,
      strategy=<Strategy.Spatial: 2>,
      surface=None,
      tree_depth=10,
      verbosity=0,
      weighted=False,
    ),
    data=Data: RGB, ['N', 3, 224, 224], 224, 224, 3, first
  	 Target:CLASS: 207, CONF: 0.20462, TARGET_CLASS: None, TARGET_CONFIDENCE: None,
    explanation=None,
    final_mask=None,
    maps={207: 4},
    run_stats=dict({
      'avg_box_size': 183.5625,
      'max_depth_reached': 5,
      'total_failing': 126,
      'total_passing': 84,
    }),
    target_map=array([[6.6666665, 6.6666665, 6.6666665, ..., 6.6666665, 6.6666665,
          6.6666665],
         [6.6666665, 6.6666665, 6.6666665, ..., 6.6666665, 6.6666665,
          6.6666665],
         [6.6666665, 6.6666665, 6.6666665, ..., 6.6666665, 6.6666665,
          6.6666665],
         ...,
         [5.5      , 5.5      , 5.5      , ..., 5.5      , 5.5      ,
          5.5      ],
         [5.5      , 5.5      , 5.5      , ..., 5.5      , 5.5      ,
          5.5      ],
         [5.5      , 5.5      , 5.5      , ..., 5.5      , 5.5      ,
          5.5      ]], dtype=float32),
  )
# ---
# name: test_preprocess
  Data: RGB, ['N', 3, 224, 224], 224, 224, 3, first
# ---
# name: test_preprocess_custom
  Data: RGB, ['N', 3, 224, 224], 224, 224, 3, first
# ---
# name: test_preprocess_npy
  Data: tabular, ['N', 3, 224, 224], None, None, None, None
# ---
# name: test_preprocess_spectral_mask_on_image_returns_warning
  Data: RGB, ['N', 3, 224, 224], 224, 224, 3, first
# ---
